Add getBearerTokenSupplier
This supports our Open AI work.

Fixes #41611